# VLM-Compression

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: llava15_7b_weight_recon.yaml
scripts/: apply_and_generate.py  build_vqav2_subset.py  compile_dense.py  eval_bench.py  eval_compiled_inmem.py  train_weight_recon.py
src/vlmcompress/: __init__.py
src/vlmcompress/compression/: __init__.py  chunk_index.py  compressor.py  generator.py  modules.py  state.py
src/vlmcompress/eval/: __init__.py  vqa_metrics.py
src/vlmcompress/eval/tasks/: __init__.py  mmbench.py  pope.py  textvqa.py  utils.py  vqav2.py
src/vlmcompress/models/: __init__.py  llava.py
src/vlmcompress/utils/: __init__.py  hf.py  logging.py  module.py  seed.py
